--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
+    "gsap": "^3.10.4",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
