--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.exclude": {
         "public/locales/da": true,
         "public/locales": true
-    }
+    },
+    "workspace.isHidden": false
 }
