--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "gsap": "^3.10.4",
     "next": "12.1.5",
+    "next-seo": "^5.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "sass": "^1.50.1"
