--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.1",
     "clsx": "^1.1.1",
+    "graphql": "^16.4.0",
     "gsap": "^3.10.4",
     "next": "12.1.5",
     "next-seo": "^5.4.0",
